Fix theme flickering

--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,8 @@
+:root {
+  --text-color: black;
+  --background-color: white;
+}
+
 ::-webkit-scrollbar {
   display: none;
 }
@@ -7,19 +12,14 @@
 }
 
 body {
-  color: #1e293b;
-  background-color: #f8fafc;
+  color: var(--text-color);
+  background-color: var(--background-color);
   transition: color 400ms ease-in-out;
   transition: background-color 400ms ease-in-out;
 }
 
 section {
   padding: 2rem 0;
-}
-
-.dark {
-  color: #f8fafc;
-  background-color: #1e293b;
 }
 
 .theme-btn {
